project.jsx css changes

--- a/src/CSS/Project.css
+++ b/src/CSS/Project.css
@@ -1,4 +1,4 @@
-pre,
+/* pre,
 code {
   font-family: "Fira Code", monospace;
 }
@@ -8,4 +8,4 @@ img {
 }
 img:hover {
   transform: scale(1.02);
-}
+} */
